; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/resctrl/extr_rdtgroup.c_rdt_last_cmd_status_show.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/resctrl/extr_rdtgroup.c_rdt_last_cmd_status_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kernfs_open_file = type { i32 }
%struct.seq_file = type { i32 }

@rdtgroup_mutex = common dso_local global i32 0, align 4
@last_cmd_status = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%.*s\00", align 1
@last_cmd_status_buf = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"ok\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kernfs_open_file*, %struct.seq_file*, i8*)* @rdt_last_cmd_status_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rdt_last_cmd_status_show(%struct.kernfs_open_file* %0, %struct.seq_file* %1, i8* %2) #0 {
  %4 = alloca %struct.kernfs_open_file*, align 8
  %5 = alloca %struct.seq_file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.kernfs_open_file* %0, %struct.kernfs_open_file** %4, align 8
  store %struct.seq_file* %1, %struct.seq_file** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = call i32 @mutex_lock(i32* @rdtgroup_mutex)
  %9 = call i32 @seq_buf_used(i32* @last_cmd_status)
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load %struct.seq_file*, %struct.seq_file** %5, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @last_cmd_status_buf, align 4
  %16 = call i32 @seq_printf(%struct.seq_file* %13, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %15)
  br label %20

17:                                               ; preds = %3
  %18 = load %struct.seq_file*, %struct.seq_file** %5, align 8
  %19 = call i32 @seq_puts(%struct.seq_file* %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  br label %20

20:                                               ; preds = %17, %12
  %21 = call i32 @mutex_unlock(i32* @rdtgroup_mutex)
  ret i32 0
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @seq_buf_used(i32*) #1

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, i32, i32) #1

declare dso_local i32 @seq_puts(%struct.seq_file*, i8*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
